add EmbedLemmy component

--- a/docs/announcements/2024-04-08_lemmyvision-2024.md
+++ b/docs/announcements/2024-04-08_lemmyvision-2024.md
@@ -35,15 +35,22 @@ head:
   returnText="Back to Announcements"
 />
 
-For more information on Lemmyvision, you can see the links below:
 
-- Community: https://lemmy.ca/c/lemmyvision@jlai.lu
-- [Join Lemmyvision, a Eurovision-like Song Contest for Lemmy communities around the world! (fediverse@lemmy.world)](https://lemmy.ca/post/16723167)
-- [Would you like to participate to Lemmyvision, a Eurovision-like song contest for Lemmy? (main@lemmy.ca)](https://lemmy.ca/post/16727996)
+For more information on Lemmyvision, you can see the details below:
 
 > I’d like to invite you to participate in Lemmyvision, a Eurovision-like Song Contest for Lemmy communities around the world ! I’d love for people across Lemmy to participate, and I hope it will bring people together through our diverse taste of music, so join us if you’d like to discover new music and culture from around the world!
 
-::: tip Rules and Process
+<EmbedLemmy
+  :links="[
+    'https://lemmy.ca/post/16723167'
+  ]"
+  :titleLines="3"
+  :excerptLines="5"
+/>
+
+
+
+**Rules and Process**
 
 > - We have until April 1st to pick a song. 
 > - Global voting will happen from April 1st to April 8th, so check in again then
@@ -51,7 +58,7 @@ For more information on Lemmyvision, you can see the links below:
 > - Songs should be Canadian (rules aren't strict)
 > - Songs should be released between **Jan 01 2023** and **Dec 31 2023**
 > - We can either submit one song, or 1 each for English and French ([source](https://lemmy.ca/post/16727996))
-:::
+
 
 ## Nominations for lemmy.ca's Submission
 
@@ -73,10 +80,27 @@ Submissions from other years (not 2023):
 
 ## Our Submission
 
-**Voting thread**: https://lemmy.ca/post/16990273
-
 After voting, we decided to submit [Hotter Now](https://www.youtube.com/watch?v=NN3WVCz-5Bc) by Lu Kala!
+
+See the voting thread: https://lemmy.ca/post/16990273
+
+<EmbedLemmy
+  :links="[
+    'https://lemmy.ca/post/16990273'
+  ]"
+  :titleLines="3"
+  :excerptLines="5"
+/>
 
 ## Final Results
 
-See here for the final results: https://jlai.lu/post/6041838
+See the final results: https://jlai.lu/post/6041838
+
+<EmbedLemmy
+  :links="[
+    'https://jlai.lu/post/6041838'
+  ]"
+  :titleLines="3"
+  :excerptLines="5"
+/>
+
