--- a/docs/announcements/2024-07-15_canvas-2024.md
+++ b/docs/announcements/2024-07-15_canvas-2024.md
@@ -58,3 +58,11 @@ We hope to see you next time!
 **What we did**
 
 See the discussion thread here: https://lemmy.ca/post/24881080
+
+<EmbedLemmy
+  :links="[
+    'https://lemmy.ca/post/24881080'
+  ]"
+  :titleLines="3"
+  :excerptLines="5"
+/>
