separate french & english section blog support

--- a/docs/en/announcements/2024-04-08_lemmyvision-2024.md
+++ b/docs/en/announcements/2024-04-08_lemmyvision-2024.md
@@ -21,7 +21,7 @@ head:
       content: Lemmyvision 2024
   - - meta
     - property: og:url
-      content: https://fedecan.ca/announcements/2024-04-08_lemmyvision-2024
+      content: https://fedecan.ca/en/announcements/2024-04-08_lemmyvision-2024
   - - meta
     - property: og:description  # 150-160 characters
       content: See the nominations and our final submission for the 2024 Lemmyvision event.
@@ -31,8 +31,9 @@ head:
 ---
 
 <BlogPostHeader 
-  returnLink="/announcements"
+  returnLink="/en/announcements"
   returnText="Back to Announcements"
+  authorsDataKey="enAuthors"
 />
 
 
