--- a/docs/en/announcements/2024-07-15_canvas-2024.md
+++ b/docs/en/announcements/2024-07-15_canvas-2024.md
@@ -21,7 +21,7 @@ head:
       content: Canvas 2024
   - - meta
     - property: og:url
-      content: https://fedecan.ca/announcements/2024-07-15_canvas-2024
+      content: https://fedecan.ca/en/announcements/2024-07-15_canvas-2024
   - - meta
     - property: og:description  # 150-160 characters
       content: Thank you to everyone that participated, it was fun! You can see our piece of the 2024 Fediverse Canvas event here.
@@ -31,8 +31,9 @@ head:
 ---
 
 <BlogPostHeader 
-  returnLink="/announcements"
+  returnLink="/en/announcements"
   returnText="Back to Announcements"
+  authorsDataKey="enAuthors"
 />
 
 Thank you to everyone that participated in the 2024 Fediverse Canvas event! It was fun to see all the different contributions from across the Fediverse.
