VP-valence components to ^0.2.2

--- a/docs/en/announcements/2024-04-08_lemmyvision-2024.md
+++ b/docs/en/announcements/2024-04-08_lemmyvision-2024.md
@@ -41,7 +41,7 @@ For more information on Lemmyvision, you can see the details below:
 
 > I’d like to invite you to participate in Lemmyvision, a Eurovision-like Song Contest for Lemmy communities around the world ! I’d love for people across Lemmy to participate, and I hope it will bring people together through our diverse taste of music, so join us if you’d like to discover new music and culture from around the world!
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/16723167'
   ]"
@@ -85,7 +85,7 @@ After voting, we decided to submit [Hotter Now](https://www.youtube.com/watch?v=
 
 See the voting thread: https://lemmy.ca/post/16990273
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/16990273'
   ]"
@@ -97,7 +97,7 @@ See the voting thread: https://lemmy.ca/post/16990273
 
 See the final results: https://jlai.lu/post/6041838
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://jlai.lu/post/6041838'
   ]"
