--- a/docs/en/announcements/2024-07-15_canvas-2024.md
+++ b/docs/en/announcements/2024-07-15_canvas-2024.md
@@ -60,7 +60,7 @@ We hope to see you next time!
 
 See the discussion thread here: https://lemmy.ca/post/24881080
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/24881080'
   ]"
