--- a/docs/en/announcements/2025-04-10_lemmyvision-2025.md
+++ b/docs/en/announcements/2025-04-10_lemmyvision-2025.md
@@ -1,4 +1,6 @@
 ---
+aside: false
+
 title: 2025 Lemmyvision Song Contest
 date: 2025-04-10
 author: fedecan
@@ -40,7 +42,7 @@ Lemmyvision is an annual song contest held on the forum side of the Fediverse. R
 
 Given Canada's multilingual nature, we were allowed to submit songs in English, French, and Indigenous languages separately.
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/40067357',
   ]"
@@ -50,7 +52,7 @@ Given Canada's multilingual nature, we were allowed to submit songs in English, 
 
 We opened up a nomination thread and received many incredible nominations. After narrowing down the list based on the contest requirements, we had a total of 26 nominations to choose from.
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/40262691'
   ]"
@@ -60,7 +62,7 @@ We opened up a nomination thread and received many incredible nominations. After
 
 The nominations were as follows. The nominations that were marked as invalid were not released within the time frame of the contest (around or after January 1st, 2024). However, they have been included here for your enjoyment. :)
 
-<JSONTable
+<VpvTableJSON
     :jsonDataProp="nominations"
     :columns="[
         { key: 'artist', title: 'Artist Name', format: 'text' }, 
@@ -77,7 +79,7 @@ The nominations were as follows. The nominations that were marked as invalid wer
 
 Following the nominations, we held a vote on our new LimeSurvey setup. Keep an eye out for LimeSurvey again when we run our next census!
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/41364770'
   ]"
@@ -87,13 +89,17 @@ Following the nominations, we held a vote on our new LimeSurvey setup. Keep an e
 
 After our local voting period ended, we [selected the following three songs](https://lemmy.ca/post/41597388) to be submitted to the finals:
 
-<ImageGallery
-  title="Winning Nominations for Canada"
-  :directUrls="['/announcements/2025_04_10-lemmyvision-2025/local_results.png']"
-  layout="vertical"
+<VpvImage 
+  :imageConfig="{
+    image: '/announcements/2025_04_10-lemmyvision-2025/local_results.png',
+    alt: 'Winning Nominations for Canada',
+    description: 'Winning Nominations for Canada',
+  }" 
+  enableBorder
+  enableZoom
 />
 
-<JSONTable
+<VpvTableJSON
     :jsonDataProp="nominations"
     :columns="[
         { key: 'artist', title: 'Artist Name', format: 'text' }, 
@@ -119,13 +125,17 @@ After our local voting period ended, we [selected the following three songs](htt
 
 After the final global voting period, the following results were announced:
 
-<ImageGallery
-  title="Final Results of Lemmyvision 2025"
-  :directUrls="['/announcements/2025_04_10-lemmyvision-2025/final_results.jpeg']"
-  layout="vertical"
+<VpvImage 
+  :imageConfig="{
+    image: '/announcements/2025_04_10-lemmyvision-2025/final_results.jpeg',
+    alt: 'Final Results of Lemmyvision 2025',
+    description: 'Final Results of Lemmyvision 2025',
+  }" 
+  enableBorder
+  enableZoom
 />
 
-<JSONTable
+<VpvTableJSON
     :jsonDataProp="globalResults"
     :columns="[
         { key: 'rank', title: 'Rank', format: 'text' },
@@ -140,7 +150,7 @@ After the final global voting period, the following results were announced:
 
 For deeper analysis of the final results, you can see the announcement thread here:
 
-<EmbedLemmy
+<VpvEmbedLemmy
   :links="[
     'https://lemmy.ca/post/42070756',
   ]"
