--- a/docs/en/announcements/2025-04-10_lemmyvision-2025.md
+++ b/docs/en/announcements/2025-04-10_lemmyvision-2025.md
@@ -1,16 +1,37 @@
 ---
 aside: false
 
-title: 2025 Lemmyvision Song Contest
+# Core Content Fields
+title: "2025 Lemmyvision Song Contest"
+summary: "We gathered 26 nominations and picked the best English, French, and Inuktitut songs to submit to this year's contest! Lemmyvision is an annual song contest held on the forum side of the Fediverse. Regional instances such as ours are asked to send one song in the language of the region to the contest. Once all songs are received, there is a global vote to determine the winner! "
+
+# Publication Fields
 date: 2025-04-10
-author: fedecan
+author: otter
+status: published
+featured: false
+
+# Organization Fields
 category: Event
-banner: /announcements/banner/2025_04_10-lemmyvision_2025.jpeg
-draft: false
-featured: true
+tags:
+  - Lemmyvision
+  - Canadian
+  - Music
+  - English
+  - Français
+  - Inuktitut
+  - Contest
 
-excerpt: "We gathered 26 nominations and picked the best English, French, and Inuktitut songs to submit to this year's contest!"
+# Featured Image
+featured_image:
+  image: "/announcements/banner/2025_04_10-lemmyvision_2025.jpeg"
+  alt: "'Lemmyvision 2' text, with three dates underneath, in white text over a dark background"
+  description: "Image credits to @inlandempire@jlai.lu"
 
+# Content Options
+reading_time: 5
+
+# Built in Social Media Sharing Fields
 head:
   - - meta
     - property: og:type
@@ -32,7 +53,7 @@ head:
       content: Event
 ---
 
-<BlogPostHeader 
+<VpvArticleHeader 
   returnLink="/en/announcements"
   returnText="Back to Announcements"
   authorsDataKey="enAuthors"
@@ -68,7 +89,15 @@ The nominations were as follows. The nominations that were marked as invalid wer
         { key: 'artist', title: 'Artist Name', format: 'text' }, 
         { key: 'song', title: 'Song Name', format: 'text' }, 
         { key: 'link', title: 'Link to Listen', format: 'link' },
-        { key: 'language', title: 'Language', format: 'tags' },
+        { key: 'language', title: 'Language', format: 'tags',
+          options: {
+                tagColors: {
+                'English': '#AA325F',
+                'French': '#AA323D',
+                'Inuktitut': '#AA3240',
+                }
+            }
+        },
         { key: 'valid', title: 'Valid Nomination', format: 'boolean' },
     ]"
     defaultSortField="artist"
@@ -105,7 +134,15 @@ After our local voting period ended, we [selected the following three songs](htt
         { key: 'artist', title: 'Artist Name', format: 'text' }, 
         { key: 'song', title: 'Song Name', format: 'text' }, 
         { key: 'link', title: 'Link to Listen', format: 'link' },
-        { key: 'language', title: 'Language', format: 'tags' },
+        { key: 'language', title: 'Language', format: 'tags',
+          options: {
+                tagColors: {
+                'English': '#AA325F',
+                'French': '#AA323D',
+                'Inuktitut': '#AA3240',
+                }
+            }
+        },
         { key: 'valid', title: 'Valid Nomination', format: 'boolean' },
     ]"
     defaultSortField="artist"
